--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-.App {
+.App-container {
   text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    
+
 }
 
 .App-logo {
