--- a/src/components/card/CardWord.module.css
+++ b/src/components/card/CardWord.module.css
@@ -5,7 +5,7 @@
    
     min-width: 80%;
     max-width: 500px;
-    height: 300px;
+    
     border-radius: 20px;
     border: 1px solid #fff;
     
@@ -24,6 +24,6 @@
 .card_translate{
     font-size: 1rem;
     color: rgb(21, 20, 19);
-    margin: 100px;
+    margin: 100px 5px 30px 5px;
    
 }
