--- a/src/components/train-mode/trainMode.css
+++ b/src/components/train-mode/trainMode.css
@@ -9,14 +9,14 @@
 .cards {
     display: grid;
     grid-template: repeat(3, 1fr) / repeat(4,1fr);
-    gap: 20px;
+    gap: 15px;
 }
 
 .card {
     height: 150px;
     width: 150px;
-    border-radius: 2px;
-    border: 1px solid #10c281;
+    border-radius: 5px;
+    border: 2px solid #10c281;
     cursor: pointer;
 }
 .image-card {
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 8px;
+    border-radius: 5px;
     position: absolute;
     top: 0;
     left: 0;
@@ -49,13 +49,13 @@
     backface-visibility: hidden;
 }
 .card .front {
-    background-color: blue;
-    border: #10c281 2px solid;
+    background-color: #fff;
+    
     transform: rotateY(180deg);
 }
 .card .back {
-    border: #601258 2px solid;
-    border-radius: 5px;
+   
+   
     font-size: 100px;
     transition: 0.3s ease all;
 }
