--- a/src/components/train-mode/trainMode.css
+++ b/src/components/train-mode/trainMode.css
@@ -64,19 +64,23 @@
 .button-restart:hover {
    
     border: #ff00a2 4px solid;
-    background-color: #601258;
-    color: #fff;
+    background-color: #7d1673;
+    
     
 
     transform: scale(1.05);
 }
-
+.button-restart:active{
+    
+    transform: scale(0.98);
+}
 .button-restart {
     cursor: pointer;
     margin: 30px 0;
     height: 30px;
     border-radius: 5px;
     transition: 0.3s ease all;
-    
+    background-color: #601258;
+    color: #fff;
 
 }
