--- a/src/components/train-mode/trainMode.css
+++ b/src/components/train-mode/trainMode.css
@@ -4,17 +4,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .cards {
-    display: grid;
-    grid-template: repeat(3, 1fr) / repeat(4,1fr);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    /* grid-template: repeat(3, 1fr) / repeat(4,1fr); */
     gap: 15px;
 }
 
 .card {
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     border-radius: 5px;
     border: 2px solid #10c281;
     cursor: pointer;
@@ -75,13 +79,14 @@
     transform: scale(0.98);
 }
 .button-restart {
-    width: 100%;
+    width:90%;
     cursor: pointer;
-    margin: 30px 0;
+    margin: 30px 15px;
     height: 30px;
     border-radius: 5px;
     transition: 0.3s ease all;
     background-color: #601258;
     color: #fff;
+
 
 }
