--- a/src/components/train-mode/trainMode.css
+++ b/src/components/train-mode/trainMode.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 80vw;
+    max-width: 650px;
 }
 
 .cards {
