--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --font-size-title: 2rem;
+  --font-color-title: rgb(5, 84, 94);
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title {
+  font-size: var(--font-size-title);
+  color: var(--font-color-title);
 }
