--- a/src/components/card/CardWord.module.css
+++ b/src/components/card/CardWord.module.css
@@ -6,7 +6,7 @@
   
     max-width: 60vw;
     min-width: 200px;
-    
+    height: 300px;
     border-radius: 20px;
     border: 1px solid #fff;
     
