--- a/src/containers/CardPage/CardPage.module.css
+++ b/src/containers/CardPage/CardPage.module.css
@@ -6,3 +6,23 @@
     justify-content: center;
     gap: 3vw;
 }
+
+.button {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    transition: 0.3s ease all;
+}
+
+
+.button:hover {
+    transform: scale(1.05);
+}
+.button:active{
+    
+    transform: scale(0.98);
+}
+.button:disabled{
+    
+    transform: scale(1);
+}
