--- a/src/components/card/CardWord.module.css
+++ b/src/components/card/CardWord.module.css
@@ -10,7 +10,12 @@
     border-radius: 20px;
     border: 1px solid #fff;
     margin: 0 3vw;
+    transition: 0.3s ease all;
     
+}
+.cardContainer:focus {
+    transform: scale(1.1);
+  
 }
 .card_word{
     font-size: 3rem;
