--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,7 +4,7 @@ width: 100vw;
 }
 .header{
     color: #fff;
-    font-size: 3rem;
+    font-size: 2rem;
 
    
 }
@@ -14,10 +14,51 @@ width: 100vw;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
+   
+}
+
+.menu-list__container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    }
+    
+    .menu-list__container a {
+    display: block;
+    margin: 0 10px;
+    padding: 7px 10px;
+    min-width: 70px;
+    border: 1px solid transparent;
+       color: #fff;
+    text-shadow: none;
+    border-radius: 3px;
+    text-align: center;
+    text-decoration: none;
+   transition: 0.4 ease all;
+    /* cursor: pointer; */
+    }
+    .menu-list__container a:hover {
+        border: 1px solid #fff;
+       transform: scale(1.08);
+        text-shadow: none;
+        border-radius: 3px;
+    
+    }
+    .lmenu-list__container :global(a.active){
+        border: 2px solid var(--color-violet);
+        color: var(--color-violet);
+        text-shadow: none;
+        border-radius: var(--border-radius-small);
+    }
+.menu-link { 
+color: #fff;
+text-decoration: none;
 }
 .button {
     cursor: pointer;
-    width: 100px;
+    width: 90px;
     height: 30px;
     color: #fff;
     background-color:  rgba(115, 123, 125, 0.498);
