--- a/src/containers/CardPage/CardPage.module.css
+++ b/src/containers/CardPage/CardPage.module.css
@@ -1,7 +1,7 @@
 .cardlist_container{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
     gap: 3vw;
