--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -36,7 +36,7 @@ width: 100vw;
     border-radius: 3px;
     text-align: center;
     text-decoration: none;
-   transition: 0.4 ease all;
+   transition: 0.4s ease all;
     /* cursor: pointer; */
     }
     .menu-list__container a:hover {
