--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,7 +7,7 @@
     background-color: rgb(5, 84, 94);
     width: 100%;
     height: 10vh;
-    padding: 10px 0px;
+    padding: 10px 0px 20px 0;
    
   
     }
@@ -20,7 +20,10 @@
 .text {
     color: #fff;
     text-decoration: none;
+
+  
 }
 .a_container{
     text-decoration: none; 
+
 }
