--- a/src/components/card/CardWord.module.css
+++ b/src/components/card/CardWord.module.css
@@ -1,4 +1,4 @@
-.cardContainer{
+.cardContainer, .cardContainer__learned{
     display: flex;
     flex-direction: column;
     background-color: rgb(231, 204, 165);
@@ -12,6 +12,9 @@
     margin: 0 3vw;
     transition: 0.3s ease all;
     
+}
+.cardContainer__learned{
+    background-color: rgb(217, 220, 214);
 }
 .cardContainer:focus {
     transform: scale(1.1);
@@ -34,7 +37,7 @@
 .card_translation, .card_button{
     font-size: 1rem;
     color: rgb(21, 20, 19);
-    background-color: antiquewhite;
+    background-color: rgb(238, 231, 223);
     border-radius: 5px;
     width: fit-content;
     padding: 10px;
@@ -45,12 +48,15 @@
 .card_button {
 transition: 0.3s ease all;
 cursor: pointer;
+background-color: rgb(5, 84, 94);
+color: #fff;
 }
 
 
 .card_button:hover {
     transform: scale(1.05);
-    background-color: rgb(5, 84, 94);
+
+    background-color: rgb(0, 120, 135);
     color: #fff;
 }
 .card_button:active{
