--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,3 +1,37 @@
 .form__wrapper {
     margin:80px 0;
 }
+
+.form {
+    margin: 30px 0;
+}
+
+.form__input {
+    padding: 7px 15px;
+    color: rgb(5, 84, 94);
+    border: 1px solid rgb(5, 84, 94);  
+    border-radius: 25px;
+}
+
+.form__button {
+
+    font-size: 0.9rem;
+    border-radius: 25px;
+    width: fit-content;
+    padding: 7px 15px;
+    border: 1px solid rgb(5, 84, 94);
+    transition: 0.3s ease all;
+    cursor: pointer;
+    background-color: rgb(239, 239, 239);
+    color: rgb(5, 84, 94);
+  }
+  
+  .form__button:hover {
+    transform: scale(1.03);
+  
+    background-color: rgb(5, 84, 94);
+    color: #fff;
+  }
+  .form__button:active {
+    transform: scale(0.98);
+  }
