--- a/src/components/AddNew/AddNew.module.css
+++ b/src/components/AddNew/AddNew.module.css
@@ -48,7 +48,12 @@ flex-direction: column;
   .form__button:active {
     transform: scale(0.98);
   }
-
+  .form__button:disabled {
+    color: rgb(255, 255, 255);
+    background-color:rgb(87, 98, 100);
+    border: 1px solid rgb(255, 255, 255);
+    cursor:none;
+    }
   .label_btn {
     color: transparent;
   }
