--- a/src/components/AddWord/AddWord.module.css
+++ b/src/components/AddWord/AddWord.module.css
@@ -19,11 +19,15 @@ display: flex;
 flex-direction: column;
 }
 
-.form__input {
+.form__input, .errorInput {
     padding: 7px 15px;
     color: rgb(5, 84, 94);
     border: 1px solid rgb(5, 84, 94);  
     border-radius: 25px;
+}
+.errorInput {
+    border: 2px solid red;
+ 
 }
 
 .form__button {
